# genuary

./: Cargo.toml
2023/: Cargo.toml  justfile
2023/daily-template/src/: lib.rs  main.rs
2023/prompts/gen-01-particles/: Cargo.toml
2023/prompts/gen-01-particles-2/assets/shaders/: game_of_life.wgsl
2023/prompts/gen-01-particles-2/src/: main.rs
2023/prompts/gen-01-particles/assets/: genuary_compute_shader.wgsl
2023/prompts/gen-01-particles/src/: lib.rs
2023/prompts/gen-02-no-palettes/assets/: custom_material.wgsl
2023/prompts/gen-02-no-palettes/src/: main.rs
2023/prompts/gen-04-pixels/: README.md
2023/prompts/gen-10-hexagons/: Cargo.toml
2023/prompts/gen-12-lava-lamps/assets/: lava_lamp.wgsl
2023/prompts/gen-12-lava-lamps/src/: main.rs
2024/: Cargo.toml
2024/prompts/gen-01-lines/: Cargo.toml
2024/prompts/gen-01-lines/assets/: material.wgsl
2024/prompts/gen-01-lines/src/: main.rs
2024/prompts/gen-02-layers/: Cargo.toml
2024/prompts/gen-02-layers/src/: main.rs
daily-template/: Cargo.toml
prompts/gen-01-particles-2/: Cargo.toml
prompts/gen-01-particles/src/: compute.rs  main.rs
prompts/gen-02-no-palettes/: Cargo.toml
prompts/gen-04-pixels/: Cargo.toml
prompts/gen-04-pixels/assets/car-kit/: taxi.gltf
prompts/gen-04-pixels/src/: main.rs
prompts/gen-12-lava-lamps/: Cargo.toml
