[workspace]
resolver = "2"

members = ["prompts/*"]
default-members = ["prompts/*"]

[workspace.dependencies]
itertools = "0.12.0"
nom = "7.1.3"
divan = "0.1.7"
miette = { version = "5.10", features = ["fancy"] }
thiserror = "1.0.50"
dhat = "0.3.2"
nom_locate = "4.2.0"
nom-supreme = "0.8.0"
# bevy_app_compute = "0.10.5"
bevy_app_compute = { git = "https://github.com/Kjolnyr/bevy_app_compute", rev = "5cc5400e0a309cf010a399d2cde65fc8fdd4b5a6" }
bevy = { version = "0.12", features = ["file_watcher"] }
bevy_xpbd_3d = { version = "0.3", features = ["simd"] }
bevy_tweening = "0.9"
bevy_mod_picking = { version = "0.17", features = ["highlight"] }
bevy_basic_camera = { git = "https://github.com/DGriffin91/bevy_basic_camera" }
rstest = "0.18"
rstest_reuse = "0.6"

# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3

[lints.clippy]
type_complexity = "allow"
too_many_arguments = "allow"
