[workspace]
resolver = "2"

members = ["prompts/*"]
default-members = ["prompts/*"]

[workspace.dependencies]
itertools = "0.14.0"
bevy = { version = "0.15", features = ["file_watcher"] }


# Enable only a small amount of optimization in debug mode
[profile.dev]
opt-level = 1

# Enable max optimizations for dependencies, but not for our code:
[profile.dev.package."*"]
opt-level = 3
