[package]
name = "gen-02-no-palettes"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bevy.workspace = true
# noise = { version = "0.8.2", features = ["image", "images"] }
itertools.workspace = true
