[package]
name = "gen-10-hexagons"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# bevy = { git = "https://github.com/StarArawn/bevy_ecs_tilemap", rev = "b08a5d997867d5e5a760e296dc38e435c6b268cc" }
